src/test/ui/consts/const-prop-ice.stderr
error: index out of bounds: the len is 3 but the index is 3
  --> $DIR/const-prop-ice.rs:2:5
   |
LL |     [0; 3][3u64 as usize];
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(const_err)] on by default

error: aborting due to previous error

